# votingmachine

./: Cargo.toml  README.md  base.data  build_ref_striples.sh  refs.data  vote.json  votebootstrap.json  voteconf.json
examples/: init_a_vote.rs
src/: anodht.rs  lib.rs  main.rs  maindht.rs  service.rs  striples.rs  vote.rs
src/vote/: mod.rs  striples.rs
test_peers/: run_mult_peer.sh  run_peer.sh
test_peers/peers/: conf1.json  conf2.json  conf3.json  conf4.json  conf5.json
test_peers/peers_bootstrap/: conf1.json  conf2.json  conf3.json  conf4.json  conf5.json
