[package]

name = "votingmachine"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]

[[bin]]
name = 'voting'
path = 'src/main.rs'
doc = false

[dependencies]

log = "~0.3.4"
env_logger = "~0.4.3"
uuid = "~0.5.1"
rand = "~0.3.11"
bincode = "~0.8.0"
serde = "~1.0.10"
serde_derive = "~1.0.10"
serde_json = "~1.0.2"

[dependencies.mydht]
#git = "https://github.com/cheme/mydht.git"
path = "../mydht/mydht"

[dependencies.mydht-openssl]
#git = "https://github.com/cheme/mydht.git"
path = "../mydht/mydht-openssl"
[dependencies.mydht-tcp-loop]
#git = "https://github.com/cheme/mydht.git"
path = "../mydht/mydht-tcp-loop"
[dependencies.mydht-bincode]
#git = "https://github.com/cheme/mydht.git"
path = "../mydht/mydht-bincode"
[dependencies.mydht-slab]
#git = "https://github.com/cheme/mydht.git"
path = "../mydht/mydht-slab"
[dependencies.mydht-inefficientmap]
#git = "https://github.com/cheme/mydht.git"
path = "../mydht/mydht-inefficientmap"
[dependencies.striple]
#git = "https://github.com/cheme/rust-striple.git"
path = "../rust-striple"

