[package]

name = "votingmachine"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]

[[bin]]
name = 'voting'
path = 'src/main.rs'
doc = false


[[example]]
name='init_a_vote'
path = "examples/init_a_vote.rs"


[dependencies]

log = "~0.3.4"
lazy_static = "~0.2.8"
env_logger = "~0.4.3"
uuid = "~0.5.1"
rand = "~0.3.11"
bincode = "~0.8.0"
serde = "~1.0.10"
#serde_derive = "~1.0.10"
serde_json = "~1.0.2"
rust-base58 = "*"
sized_windows_lim = {  git = "https://github.com/cheme/readwrite-comp.git" }
mio = "~0.6.10"
igd = "~0.7.0"
libc = "~0.2"
ipnetwork = "~0.12.7"

[dependencies.serde_derive]
git = "https://github.com/cheme/serde.git"

[dependencies.mydht]
#git = "https://github.com/cheme/mydht.git"
path = "../mydht/mydht"

[dependencies.mydht-openssl]
#git = "https://github.com/cheme/mydht.git"
path = "../mydht/mydht-openssl"
# needed when used with limiter with padding
features = ["relaxfinalize"]
[dependencies.mydht-tcp-loop]
#git = "https://github.com/cheme/mydht.git"
path = "../mydht/mydht-tcp-loop"
[dependencies.mydht-bincode]
#git = "https://github.com/cheme/mydht.git"
path = "../mydht/mydht-bincode"
[dependencies.mydht-slab]
#git = "https://github.com/cheme/mydht.git"
path = "../mydht/mydht-slab"
[dependencies.mydht-inefficientmap]
#git = "https://github.com/cheme/mydht.git"
path = "../mydht/mydht-inefficientmap"
[dependencies.striple]
git = "https://github.com/cheme/rust-striple.git"
branch = "redesign"
#path = "../rust-striple"
[dependencies.mydht-tunnel]
#git = "https://github.com/cheme/mydht.git"
path = "../mydht/mydht-tunnel"

